--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 	<head>
 		<meta-charset="utf-8">
 		<link rel="stylesheet" href="css/style.css">
-		<title>works in progress</title>
+		<title>website in progress</title>
 	</head>
 	<body>
-		<h2>Solo Exhibition Scheduled for 2016 at Plug Projects, Kansas City, MO</h2>
+		<h2>Solo Exhibition Scheduled for Fall 2018 at Johnson County Library, Oak Park Branch</h2>
 		<img src="img/cheeseburger.w.potatoes.jpg" alt="beaded lunch tray">
 		<h3>"November 16, 2012: Cheeseburger served with potato smiles, chilled pears, juice and milk."</h3>
 		<h3>4" x 6"</h3>
